# hook

./: .cpack_ignore  .gitignore  1qqq  AUTHORS  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.sh  clean  clean.bat  codecov.yml  install.bat  install.sh  pack.bat  pack.sh  run-benchmark.sh  run-tests  run-tests.bat  run-tests.sh  version.h
.circleci/: config.yml
.github/: FUNDING.yml
benchmark/: fib.hk  fib.hook  fib.js  fib.lua  fib.php  fib.py  fib.rb
cli/: CMakeLists.txt  main.c
core/: CMakeLists.txt  arrays.c  arrays.h  encoding.c  encoding.h  hashing.c  hashing.h  hk_arrays.c  hk_arrays.h  hk_encoding.c  hk_encoding.h  hk_hashing.c  hk_hashing.h  hk_io.c  hk_io.h  hk_math.c  hk_math.h  hk_numbers.c  hk_numbers.h  hk_os.c  hk_os.h  hk_regex.c  hk_regex.h  hk_socket.c  hk_socket.h  hk_strings.c  hk_strings.h  hk_utf8.c  hk_utf8.h  hook_arrays.c  hook_arrays.h  hook_io.c  hook_io.h  hook_math.c  hook_math.h  hook_numbers.c  hook_numbers.h  hook_os.c  hook_os.h  hook_strings.c  (+29 more)
disabled-workflows/: build-extensions.yml  build-with-extensions.yml  release-extensions.yml  release-with-extensions.yml
docs/: built-in.md  built-in.txt  core-modules.md  core-modules.txt  grammar.ebnf  grammar.md  grammar.txt  keywords.txt  opcodes.txt  tokens.txt
example/: 100doors.hk  99_bottles_of_beer.hk  99_bottles_of_beer.hook  99bottles.hk  arith.hook  bubble_sort.hk  bubble_sort.hook  distance.hk  distance.hook  factorial.hook  fibonacci.hook  fizzbuzz.hk  fizzbuzz.hook  guessing_game.hk  guessing_game.hook  hanoi.hk  hello.hk  hello.hook  mandelbrot.hook  quick_sort.hk  quick_sort.hook
examples/: 100doors.hk  99bottles.hk  arith.hook  array.hook  assign.hook  bhaskara.hk  bigint.hk  binary_search.hk  branching.hook  bubble-sort.hook  bubble_sort.hk  closure.hk  coin_flip.hk  collatz.hk  comparison.hook  curl.hk  distance.hk  ecdsa.hk  echo.hook  equality.hook  fibonacci.hk  fractal.hk  guessing_game.hk  hailstone.hk  hanoi.hk  hello.hook  http_client.hk  http_server.hk  import.hk  knapsack.hk  knuth_shuffle.hk  locals.hook  log.hk  logical.hook  looping.hook  mandelbrot.hk  module.hk  nbody.hk  num_to_words.hk  palindrome.hk  (+20 more)
extensions/: CMakeLists.txt  bigint.c  bigint.h  crypto.c  crypto.h  curl.c  curl.h  encoding.c  encoding.h  fastcgi.c  fastcgi.h  geohash.c  geohash.h  gmp.c  gmp.h  hashing.c  hashing.h  leveldb.c  leveldb.h  mysql.c  mysql.h  polling.c  polling.h  postgres.c  postgres.h  random.c  random.h  raylib_mod.c  raylib_mod.h  redis.c  redis.h  regex.c  regex.h  secp256r1.c  secp256r1.h  sqlite.c  sqlite.h  url.c  uuid.c  uuid.h  (+4 more)
include/: h_array.h  h_callable.h  h_chunk.h  h_common.h  h_error.h  h_iterator.h  h_memory.h  h_range.h  h_string.h  h_struct.h  h_userdata.h  h_value.h  h_vm.h  hk_array.h  hk_callable.h  hk_chunk.h  hk_compiler.h  hk_dump.h  hk_error.h  hk_iterable.h  hk_iterator.h  hk_memory.h  hk_range.h  hk_state.h  hk_status.h  hk_string.h  hk_struct.h  hk_userdata.h  hk_utils.h  hk_value.h  hk_vm.h  hook.h  hook_array.h  hook_callable.h  hook_chunk.h  hook_common.h  hook_compiler.h  hook_dump.h  hook_error.h  hook_iterable.h  (+10 more)
include/hook/: dump.h  (+19 more)
modules/: CMakeLists.txt  encoding.c  encoding.h  h_arrays.c  h_arrays.h  h_io.c  h_io.h  h_math.c  h_math.h  h_os.c  h_os.h  h_strings.c  h_strings.h  hashing.c  hashing.h  mysql.c  mysql.h  redis.c  redis.h  secp256r1.c  secp256r1.h  sqlite.c  sqlite.h  url.c  url.h
note/: built-in.txt  core-libraries.txt  core-modules.txt  grammar.txt  keywords.txt  opcodes.txt  tokens.txt
scripts/: benchmark.sh  build-and-install.sh  build-extensions.bat  build-extensions.sh  build-with-extensions.bat  build.bat  build.sh  install.bat  install.sh  pack-extensions.bat  pack-extensions.sh  pack-with-extensions.bat  pack.bat  pack.sh  release-extensions.bat  release-extensions.sh  release-with-extensions.bat  release.bat  release.sh  test.sh  utils.sh
src/: CMakeLists.txt  array.c  array.h  arrays.c  arrays.h  base32.c  base58.c  base58.h  builtin.c  builtin.h  callable.c  callable.h  check.c  chunk.c  chunk.h  common.c  common.h  compiler.c  compiler.h  disasm.c  disasm.h  dump.c  dump.h  encoding.c  encoding.h  error.c  error.h  fs.c  fs.h  h_array.c  h_builtin.c  h_builtin.h  h_callable.c  h_chunk.c  h_common.c  h_compiler.c  h_compiler.h  h_dump.c  h_dump.h  h_error.c  (+130 more)
test/: __test  _test  anonymous_function_test  anonymous_function_test.hook  append_array_element_test  arithmetic_expression_test  arithmetic_expression_test.hook  array_add_element_test  array_add_element_test.hk  array_add_element_test.hook  array_append_element_test  array_compare_test.hook  array_concatenation_test  array_concatenation_test.hook  array_constructor_test  array_delete_element_test  array_delete_element_test.hk  array_delete_element_test.hook  array_difference_test  array_difference_test.hook  array_equal_test  array_equal_test.hook  array_get_element_test  array_get_element_test.hook  array_initializer_test  array_initializer_test.hk  array_resize_test  array_resize_test.hk  array_resize_test.hook  array_set_element_test  array_set_element_test.hk  array_set_element_test.hook  assignment_test  assignment_test.hk  assignment_test.hook  builtin_function_abs_test  builtin_function_array_test  builtin_function_array_test.hook  builtin_function_assert_test  builtin_function_assert_test.hook  (+214 more)
tests/: anonymous_function_test.hk  append_array_element_test  arithmetic_assignment_test.hk  arithmetic_expression_test.hk  array_add_element_test.hk  array_concatenation_test  array_constructor_test  array_difference_test  array_difference_test.hk  array_equal_test  array_resize_test  array_resize_test.hk  array_slice_test.hk  assignment_test  bitwise_shift_assignment_test.hk  bitwise_shift_expression_test.hk  branching_statements_and_expressions_test.hk  builtin_function_address_test.hk  builtin_function_array_test  builtin_function_bool_test.hk  builtin_function_cap_test  builtin_function_exit_test.hk  builtin_function_index_of_test  builtin_function_is_array_test.hk  (+165 more)
(+17 files in other folders)
